# XML::FeedPP Changes

2009/01/18 (0.37)
    * fixed #42472: items with 2 titles break the parser
      (thanks to thaabit)
      http://rt.cpan.org/Public/Bug/Display.html?id=42472
    * fixed #41771: possible bug in $item->guid
      (thanks to PriggeScottM)
      http://rt.cpan.org/Public/Bug/Display.html?id=41771

2008/10/26 (0.36)
    * RFC1123 and RSS spec allow two-digit date format
      http://rt.cpan.org/Public/Bug/Display.html?id=36890
      http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=503260
      (thanks to Illtud Daniel and Anthony DeRobertis)

2008/05/18 (0.35)
    * supports multiple <rdf:Seq> which is invalid though
      http://www.kawa.net/works/perl/feedpp/feedpp.html#com-2008-05-17T13:13:33Z
      "Pseudo-hashes are deprecated at FeedPP.pm line 1085."
      (thanks to nasano)
    * accepts some invalid W3CDTF format
    * merge() returns $self

2008/01/14 (0.34)
    * add time zones supported: UT EST EDT CST CDT MST MDT PST PDT
      http://www.rfc-editor.org/rfc/rfc2822.txt
      (thanks to Matti)

2008/01/05 (0.33)
    * Subversion on Google Code
      http://xml-treepp.googlecode.com/svn/trunk/XML-FeedPP/
    * XML::FeedPP::Plugin::DumpJSON module branched
      http://search.cpan.org/dist/XML-FeedPP-Plugin-DumpJSON/

2007/11/16 (0.31) not released
    * getting from multiple nodes is supported for <media:thumbnail url="">

2007/08/20 (0.30)
    * Atom 1.0 supported. Atom 0.3 is still default. (thanks to takemaru)
      Note that future version of this would change its default as Atom 1.0.
      http://teahut.sakura.ne.jp/b/2007-06-24-1.html

2007/07/27 (0.22)
    * bugfix: Daylight saving time accepted.
      http://cpantesters.perl.org/show/XML-FeedPP.html#XML-FeedPP-0.21

2007/01/21 (0.21)
    * update new() method to allow key/value pairs to set elements.
    * update add_item() method to allow key/value pairs to set elements.
    * add elements() undocumented method which sets elements by key/value pairs.